<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    tools:context=".ui.activities.detail.MoviesDetailActivity">

    <!--android:src="@{detailviewmodel.detailImage}"-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85"
        app:srcCompat="@drawable/ic_photoloading"
        android:id="@+id/ivDetailMovies"
        android:contentDescription="@string/m"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="20">

    <!--android:text="@{detailviewmodel.detailLocation}"-->
    <TextView
        android:text="@string/title"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailTitle"
        android:layout_gravity="start"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:fontFamily="Roboto"
        android:typeface="normal"
        tools:text="@string/title"/>

        <TextView
            android:id="@+id/tvDetailYear"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:fontFamily="Roboto"
            android:text="@string/year"
            android:textSize="15sp"
            android:typeface="normal"
            tools:text="@string/year" />
    </LinearLayout>
</LinearLayout>